Resolved small mistakes based on the code review
- Added some javadocs
- Removed redundant code

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>